app/css/otp.styl
@require 'common';

#form-otp {
  padding-top: 40px;
  text-align: center;

  &.action {
    #otp-action {
      display: inline-block;
    }
  }

  &.action,
  &.loading {
    #otp-elem {
      display: none;
    }
    #otp-sec-outer {
      display: none;
    }
  }
}

#otp-action {
  display: none;
}

#otp-prompt {
  text-align: center;
  width: 240px;
  display: block;
  margin: 0 auto 20px;
  font-size: 14px;
  line-height: 20px;
}

#otp-elem {
  margin: 0 auto;
  width: 151px;
  position: relative;
  background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAuCAMAAAAFiil6AAAABlBMVEUAAADg4ODy8Xj7AAAAAXRSTlMAQObYZgAAABZJREFUeAFjoBoYBaNgFIwCRhSAXwIABzoAHRAAbMUAAAAASUVORK5CYII=');
  background-size: contain;
  &::after {
    position: absolute;
    top: 0;
    right: 0;
    height: 100%;
    background: #fff;
    width: 14px;
    content: '';
  }

  &.fourdigit {
    width: 110px;
  }
}

#otp {
  font-size: 18px;
  line-height: 24px;
  padding: 11px 8px;
  letter-spacing: 13px;
  border: none;
  outline: none;
}

#otp-sec-outer {
  position: absolute;
  top: 180px;
  width: 100%;
  left: 0;
  text-align: center;
  a {
    display: inline-block;
    & + a {
      margin-left: 90px;
    }
  }
}

#body[tab=wallet] #otp-sec {
  display: none;
}

.incorrect-otp {
  color: #e46e6e;
}

.add-funds {
  display: none;
  text-align: center;

  .btn {
    display: inline-block;
  }

  &.show {
    & + #otp-section {
      display: none;
    }
    & ~ #otp-sec-outer {
      display: none;
    }
  }
}

